[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]

[project]
name = "mcom02-flash-tools"
dynamic = ["version"]
description = "MCom-02 based PCB flashing tools"
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["intelhex>=2.1,<3.0", "pyserial>=3.0,<4.0"]

[project.scripts]
mcom02-flash-factory = "mcom02_flash_tools.mcom02_flash_factory:main"
mcom02-flash-spi = "mcom02_flash_tools.mcom02_flash_spi:main"
mcom02-flash-ums-mmc = "mcom02_flash_tools.mcom02_flash_ums_mmc:main"

[tool.setuptools]
packages = ["mcom02_flash_tools"]

[tool.setuptools_scm]
# empty section is required by setuptools scm
